# Sunmait-Technologies-Data-Science

./: LICENSE  README.md
home works/home work 1/: README.md  hello.py  pyproject.toml  test ruff.ipynb
home works/home work 2/: .coverage  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  tests.py
home works/home work 2/.devcontainer/: devcontainer.json
home works/home work 2/.qodo/: history.sqlite
home works/home work 2/time estimations/: time for tasks estimation.xlsx
lectures/: Bandicam для записи.ipynb  Лекция 1. Настройка devcontainer, ruff и uv для ML проектов (04.02.2025).ipynb  Лекция 3. Делаем сервис на FastAPI с моделью из HF и тестируем (11.02.2025).ipynb  Лекция 4. Dockerfile и Docker Compose (14.02.2025).ipynb  Лекция 5. Code review (18.02.2025).ipynb
levels/level 1 - Clustering/: Part 1 - Unsupervised Learning review.ipynb
tests/: Sunmait final test.ipynb  Sunmait week 1 test.ipynb
