[project]
name = "home-work-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.3",
    "triton>=3.2.0",
    "uvicorn>=0.34.0",
]
